--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,14 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
 
-    //butterknife
+    // kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // butterknife
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    //Pull Load More
+    // Pull Load More
     compile("com.wuxiaolong.pullloadmorerecyclerview:library:1.0.9") {
         exclude group: 'com.android.support'
     }
@@ -51,11 +54,14 @@ dependencies {
     compile 'com.bm.photoview:library:1.4.0'
 
     // http library
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+
+    // HTML Library
+    compile 'org.jsoup:jsoup:1.9.2'
 
     // gson library
     compile 'com.google.code.gson:gson:2.4'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 buildscript {
     ext.kotlin_version = '1.0.3'
